--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 </div>
 
 <!-- Today in History Section -->
-<section id="today-in-history-section" class="section">
-  <h2>Today in History</h2>
-  <ul id="history-events" class="content-box">
-    <li>Loading...</li>
-  </ul>
-</section>
+<div class="section today-in-history-section">
+    <h2>Today in History</h2>
+    <ul id="history-events"> <!-- Will be populated with events -->
+        <li>Loading...</li>
+    </ul>
+</div>
         
 <!-- Quote of the Day Section -->
 <div class="section quote-of-the-day-section">
