--- a/index.html
+++ b/index.html
@@ -129,18 +129,18 @@
     <p id="fun-fact-text">Loading...</p>
 </div>
 
+<!-- Quote of the Day Section -->
+<section class="section quote-of-the-day-section">
+    <h2>Quote of the Day</h2>
+    <p id="quote-of-the-day-text">Loading...</p>
+</section>
+
 <!-- Today in History Section -->
 <div class="section today-in-history-section">
     <h2>Today in History</h2>
-    <ul id="history-events"> <!-- Will be populated with events -->
+    <ul id="history-events">
         <li>Loading...</li>
     </ul>
-</div>
-        
-<!-- Quote of the Day Section -->
-<div class="section quote-of-the-day-section">
-    <h2>Quote of the Day</h2>
-    <p id="quote-text">Loading...</p>
 </div>
 
 
