--- a/index.html
+++ b/index.html
@@ -136,14 +136,12 @@
 </section>
 
 <!-- Today in History Section -->
-<div class="section today-in-history-section">
+<section class="section history-section">
     <h2>Today in History</h2>
     <ul id="history-events">
         <li>Loading...</li>
     </ul>
-</div>
-
-
+</section>
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
