--- a/index.html
+++ b/index.html
@@ -128,20 +128,18 @@
     <h2>Fun Fact of the Day</h2>
     <p id="fun-fact-text">Loading...</p>
 </div>
-        
+
 <!-- Quote of the Day Section -->
-<section class="section quote-of-the-day-section">
+<div class="section quote-of-the-day-section">
     <h2>Quote of the Day</h2>
     <p id="quote-of-the-day-text">Loading...</p>
-</section>
+</div>
 
 <!-- Today in History Section -->
-<section class="section history-section">
+<div class="section today-in-history-section">
     <h2>Today in History</h2>
-    <ul id="history-events">
-        <li>Loading...</li>
-    </ul>
-</section>
+    <p id="today-in-history-text">Loading...</p>
+</div>
         
 <!-- TikTok Shoutouts Section -->
     <div class="shoutouts-section section">
