--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
 
 <!-- Quote of the Day Section -->
-<div class="section quote-of-the-day-section">
+<div class="section quote-section">
     <h2>Quote of the Day</h2>
     <p id="quote-of-the-day-text">Loading...</p>
 </div>
