--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <p><span>Price:</span> $1,067.49</p>
                 <p><span>Date Released:</span> September 20, 2024</p>
                 <p><span>Date Bought:</span> November 08, 2024</p>
-                <p><span>OS Version:</span> iOS 18.3 (22D5055b)</p>
+                <p><span>OS Version:</span> iOS 18.3 (22D60)</p>
                 <p><span>Battery Capacity %:</span> 100%</p>
                 <p><span>Battery Charge Cycles:</span> 116</p>
             </div>
