--- a/index.html
+++ b/index.html
@@ -217,6 +217,19 @@
     </div>
 </div>
 
+<!-- Event Calendar Section -->
+<div class="section event-calendar-section">
+    <h2>Event Calendar for Live Streams and Updates</h2>
+    <div id="event-calendar">
+        <div class="calendar-header">
+            <button id="prev-month">Previous</button>
+            <span id="month-year">January 2025</span>
+            <button id="next-month">Next</button>
+        </div>
+        <div id="calendar-grid" class="calendar-grid"></div>
+    </div>
+</div>
+        
 <!-- Weather Section -->        
 <div id="weather-info">
         <h2>Weather Information</h2>
