--- a/index.html
+++ b/index.html
@@ -217,17 +217,15 @@
     </div>
 </div>
 
-<!-- Event Calendar Section -->
-<div class="section event-calendar-section">
-    <h2>Event Calendar for Live Streams and Updates</h2>
-    <div id="event-calendar">
-        <div class="calendar-header">
-            <button id="prev-month">Previous</button>
-            <span id="month-year">January 2025</span>
-            <button id="next-month">Next</button>
-        </div>
-        <div id="calendar-grid" class="calendar-grid"></div>
-    </div>
+<!-- Calendar Section -->
+<div class="calendar-container">
+    <!-- Navigation buttons -->
+    <button id="prev-month">Previous</button>
+    <div id="month-year"></div>
+    <button id="next-month">Next</button>
+
+    <!-- Days of the Week and Calendar Grid -->
+    <div id="calendar-grid"></div>
 </div>
         
 <!-- Weather Section -->        
