--- a/index.html
+++ b/index.html
@@ -220,9 +220,11 @@
 <!-- Calendar Section -->
 <div class="calendar-container">
     <!-- Navigation buttons -->
-    <button id="prev-month">Previous</button>
-    <div id="month-year"></div>
-    <button id="next-month">Next</button>
+    <div class="calendar-header">
+        <button id="prev-month">Previous</button>
+        <div id="month-year"></div>
+        <button id="next-month">Next</button>
+    </div>
 
     <!-- Days of the Week and Calendar Grid -->
     <div id="calendar-grid"></div>
