--- a/index.html
+++ b/index.html
@@ -226,9 +226,10 @@
         <button id="next-month">Next</button>
     </div>
 
-    <!-- Calendar Grid for Days -->
+    <!-- Calendar Grid -->
     <div id="calendar-grid"></div>
 </div>
+
         
 <!-- Weather Section -->        
 <div id="weather-info">
