--- a/index.html
+++ b/index.html
@@ -218,25 +218,37 @@
 </div>
 
 <!-- Calendar Section -->
-   <div class="calendar-container">
-        <div class="calendar-header">
-            <button id="prev-month">Previous</button>
-            <div id="month-year"></div>
-            <button id="next-month">Next</button>
-        </div>
-
-        <div class="calendar-days">
-            <div>Sun</div>
-            <div>Mon</div>
-            <div>Tue</div>
-            <div>Wed</div>
-            <div>Thu</div>
-            <div>Fri</div>
-            <div>Sat</div>
-        </div>
-
-        <div id="calendar-grid" class="calendar-grid"></div>
+<div class="calendar-container">
+    <!-- Calendar Header with navigation buttons -->
+    <div class="calendar-header">
+        <button id="prev-month">Previous</button>
+        <div id="month-year"></div>
+        <button id="next-month">Next</button>
     </div>
+
+    <!-- Days of the Week -->
+    <div class="calendar-days">
+        <div>Sun</div>
+        <div>Mon</div>
+        <div>Tue</div>
+        <div>Wed</div>
+        <div>Thu</div>
+        <div>Fri</div>
+        <div>Sat</div>
+    </div>
+
+    <!-- Calendar Grid (will be populated dynamically with days) -->
+    <div id="calendar-grid" class="calendar-grid"></div>
+</div>
+
+<!-- Modal for event details -->
+<div id="event-modal" class="event-modal">
+    <div class="modal-content">
+        <span id="close-modal" class="close-btn">&times;</span>
+        <div id="event-details"></div>
+    </div>
+</div>
+
         
 <!-- Weather Section -->        
 <div id="weather-info">
