--- a/index.html
+++ b/index.html
@@ -280,6 +280,25 @@
     </div>
     <!-- Add more FAQ items as needed -->
 </div>
+
+<!-- News Section -->
+<div id="news-filter">
+    <!-- Category Filter -->
+    <select id="category-filter">
+        <option value="">Select Category</option>
+        <option value="Tech">Tech</option>
+        <option value="Politics">Politics</option>
+        <option value="Entertainment">Entertainment</option>
+    </select>
+
+    <!-- Tag Search -->
+    <input type="text" id="tag-search" placeholder="Search by tags..." />
+</div>
+
+<!-- Articles Section -->
+<div id="articles-container">
+    <!-- Articles will be dynamically loaded here -->
+</div>
         
         <!-- Tech Section -->
         <div class="tech-section section">
