--- a/index.html
+++ b/index.html
@@ -282,29 +282,28 @@
 </div>
 
 <!-- News Section -->
-<div id="articles-container">
-    <!-- Example Article (just a template) -->
-    <div class="article" data-article-id="1">
-        <h2>Tech News: AI in 2025</h2>
-        <p>Artificial Intelligence is revolutionizing industries in 2025...</p>
-        <p class="date">Published: January 1, 2025</p>
-        
-        <!-- Categories and Tags -->
-        <div class="categories">
-            <div class="category">Tech</div>
-            <div class="category">AI</div>
-        </div>
-
-        <div class="tags">
-            <div class="tag">AI</div>
-            <div class="tag">2025</div>
-        </div>
-
-        <!-- Learn More Button -->
-        <button class="learn-more-btn">Learn More</button>
+<div id="news-filters">
+    <!-- Category Dropdown -->
+    <div class="filter">
+        <label for="category-filter">Category:</label>
+        <select id="category-filter">
+            <option value="">All Categories</option>
+            <option value="Tech">Tech</option>
+            <option value="Politics">Politics</option>
+            <option value="Entertainment">Entertainment</option>
+        </select>
     </div>
 
-    <!-- Modals will be dynamically inserted here -->
+    <!-- Tag Search -->
+    <div class="filter">
+        <label for="tag-search">Search by Tags:</label>
+        <input type="text" id="tag-search" placeholder="Search Tags">
+    </div>
+</div>
+
+<!-- Articles Section -->
+<div id="articles-container">
+    <!-- Articles will be dynamically inserted here -->
 </div>
         
         <!-- Tech Section -->
