--- a/index.html
+++ b/index.html
@@ -281,9 +281,8 @@
     <!-- Add more FAQ items as needed -->
 </div>
 
-<!-- News Section -->
+<!-- News Filters -->
 <div id="news-filters">
-    <!-- Category Dropdown -->
     <div class="filter">
         <label for="category-filter">Category:</label>
         <select id="category-filter">
@@ -294,14 +293,13 @@
         </select>
     </div>
 
-    <!-- Tag Search -->
     <div class="filter">
         <label for="tag-search">Search by Tags:</label>
         <input type="text" id="tag-search" placeholder="Search Tags">
     </div>
 </div>
 
-<!-- Articles Section -->
+<!-- News Articles Section -->
 <div id="articles-container">
     <!-- Articles will be dynamically inserted here -->
 </div>
