--- a/index.html
+++ b/index.html
@@ -304,6 +304,15 @@
     <!-- Articles will be dynamically inserted here -->
 </div>
 
+<!-- Modal Template -->
+<div id="modal-template" class="modal">
+    <div class="modal-content">
+        <span class="close-btn" onclick="closeModal()">&times;</span>
+        <h2 id="modal-title"></h2>
+        <p id="modal-content"></p>
+    </div>
+</div>
+
         
         <!-- Tech Section -->
         <div class="tech-section section">
