--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
      <!-- Countdown Section -->
 <div class="countdown-section">
-    <h2>Countdown to my 20th birthday</h2>
+    <h2>Countdown till I get my AFO Braces</h2>
     <div class="countdown-container">
         <div class="countdown-item">
             <span id="countdown-days" class="countdown-number">0</span>
