--- a/index.html
+++ b/index.html
@@ -358,15 +358,15 @@
 <!-- Back-to-Top Button -->
 <button id="back-to-top-btn" title="Go to top">↑</button>    
     
-<!-- Copy Protection Notice -->
+<div class="notice-container">
     <div class="copy-protection-message">
-        <p>Copying and pasting is disabled on this website.</p>
+        This content is protected by a watermark. Unauthorized use is prohibited.
     </div>
-
-<!-- Legal Protection Notice -->
-<div class="legal-protection-message">
-    <p>This repository is protected by copyright laws. You may not clone, fork, or redistribute this repository in any form. Unauthorized use of the repository may result in legal action. Any violation of these terms will be subject to legal action and prosecution to the fullest extent of the law.</p>
+    <div class="legal-protection-message">
+        All content and materials on this website are legally protected.
+    </div>
 </div>
+
 
 
 <!-- Watermark text (hidden by default, only appears when printing) -->
