--- a/index.html
+++ b/index.html
@@ -346,13 +346,15 @@
     </div>
     
 <!-- Version Panel Section (Add this just before your footer) -->
-<div class="version-info-section">
-    <div class="version-header">Version Information</div>
-    <div class="version-number">Version: v1.10.0</div>
-    <div class="build-number">Build: 2025.1.22</div>
-    <div class="device-info">Device: Loading...</div>
-    <div class="update-time">Current Date and Time: Loading...</div>
-    <div class="countdown">Page refreshing in: 5 minutes</div>
+<div class="version-info-container">
+    <div class="version-info-section">
+        <div class="version-header">Version Information</div>
+        <div class="version-number">Version: v1.10.0</div>
+        <div class="build-number">Build: 2025.1.22</div>
+        <div class="device-info">Device: Loading...</div>
+        <div class="update-time">Current Date and Time: Loading...</div>
+        <div class="countdown">Page refreshing in: 5 minutes</div>
+    </div>
 </div>
     
 <!-- Back-to-Top Button -->
