--- a/index.html
+++ b/index.html
@@ -372,12 +372,16 @@
 
 
 <!-- Watermark text (hidden by default, only appears when printing) -->
-    <div class="watermark">Watermark Text</div>
+<div class="watermark">Protected by Watermark</div>
 
-    <div class="content">
+<!-- Main content section -->
+<div class="welcome-container">
+    <div class="welcome-content">
         <h1>Welcome to My Website</h1>
         <p>This content is protected by a watermark. Unauthorized use is prohibited.</p>
     </div>
+</div>
+
     
     <!-- Footer -->
     <footer>
