--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 </div>
         
 <!-- Current President -->        
-<section id="current-president">
-  <h2>Current U.S. President</h2>
+<section id="current-president" class="president-section">
+  <h2 class="section-title">Current U.S. President</h2>
   <div class="president-info">
     <img src="donaldtrump.jpg" alt="President Donald J. Trump" class="president-photo">
     <div class="president-details">
-      <h3>Donald J. Trump</h3>
+      <h3 class="president-name">Donald J. Trump</h3>
       <p><strong>Born:</strong> June 14, 1946</p>
       <p><strong>Height:</strong> 6'3" (190.5 cm)</p>
       <p><strong>Party:</strong> Republican Party</p>
@@ -120,6 +120,7 @@
     </div>
   </div>
 </section>
+
 
 <div id="loading-spinner" class="spinner"></div>
 
