--- a/index.html
+++ b/index.html
@@ -115,12 +115,11 @@
       <p><strong>Born:</strong> June 14, 1946</p>
       <p><strong>Height:</strong> 6'3" (190.5 cm)</p>
       <p><strong>Party:</strong> Republican Party</p>
-      <p><strong>Presidential Term:</strong> January 20, 2025 at 12:00 PM - January 20, 2029 at 12:00 PM EST</p>
+      <p class="presidential-term"><strong>Presidential Term:</strong> 1/20/25 at 12:00 PM - 1/20/29 at 12:00 PM</p>
       <p><strong>Vice President:</strong> James David Vance</p>
     </div>
   </div>
 </section>
-
 
 <div id="loading-spinner" class="spinner"></div>
 
