--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1>Bus Army Dude</h1>
                 <img src="check.png" alt="Verified" class="verified">
             </div>
-            <p>Hello, my name is River, I am 19. I am autistic. I love technology.</p>
+            <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
         </div>
     
         <!-- Social Links Section -->
