--- a/index.html
+++ b/index.html
@@ -194,28 +194,28 @@
             </div>
         </div>
 
-     <!-- Countdown Section -->
-<div class="countdown-section">
-    <h2>Countdown till I get my AFO Braces</h2>
+   <!-- Countdown Section -->
+<section class="countdown-section">
     <div class="countdown-container">
         <div class="countdown-item">
-            <span id="countdown-days" class="countdown-number">0</span>
-            <span class="countdown-label">Days</span>
+            <div class="countdown-value" id="days">00</div>
+            <div class="countdown-label">Days</div>
         </div>
         <div class="countdown-item">
-            <span id="countdown-hours" class="countdown-number">00</span>
-            <span class="countdown-label">Hours</span>
+            <div class="countdown-value" id="hours">00</div>
+            <div class="countdown-label">Hours</div>
         </div>
         <div class="countdown-item">
-            <span id="countdown-minutes" class="countdown-number">00</span>
-            <span class="countdown-label">Minutes</span>
+            <div class="countdown-value" id="minutes">00</div>
+            <div class="countdown-label">Minutes</div>
         </div>
         <div class="countdown-item">
-            <span id="countdown-seconds" class="countdown-number">00</span>
-            <span class="countdown-label">Seconds</span>
+            <div class="countdown-value" id="seconds">00</div>
+            <div class="countdown-label">Seconds</div>
         </div>
     </div>
-</div>
+</section>
+
 
 <!-- Calendar Section -->
 <div class="calendar-container">
