--- a/index.html
+++ b/index.html
@@ -194,28 +194,27 @@
             </div>
         </div>
 
-   <!-- Countdown Section -->
-<section class="countdown-section">
+   <section class="countdown-section">
+    <h2 class="countdown-title">Countdown to Your Special Day!</h2>
     <div class="countdown-container">
         <div class="countdown-item">
-            <div class="countdown-value" id="days">00</div>
+            <div class="countdown-value" id="countdown-days">00</div>
             <div class="countdown-label">Days</div>
         </div>
         <div class="countdown-item">
-            <div class="countdown-value" id="hours">00</div>
+            <div class="countdown-value" id="countdown-hours">00</div>
             <div class="countdown-label">Hours</div>
         </div>
         <div class="countdown-item">
-            <div class="countdown-value" id="minutes">00</div>
+            <div class="countdown-value" id="countdown-minutes">00</div>
             <div class="countdown-label">Minutes</div>
         </div>
         <div class="countdown-item">
-            <div class="countdown-value" id="seconds">00</div>
+            <div class="countdown-value" id="countdown-seconds">00</div>
             <div class="countdown-label">Seconds</div>
         </div>
     </div>
 </section>
-
 
 <!-- Calendar Section -->
 <div class="calendar-container">
