--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
                 <a href="https://forms.gle/4n2UyC1JSJobPPpy5" target="_blank">Feedback or Suggestions Form!</a>
             </div>
         </div>
-
+        
+<!-- Countdown Section -->
  <section class="countdown-section">
     <h2 class="countdown-title">Countdown to Your Special Day!</h2>
     <div class="countdown-container">
