--- a/index.html
+++ b/index.html
@@ -195,23 +195,43 @@
         </div>
         
 <!-- Countdown Section -->
- <section class="countdown-section">
+<section class="countdown-section">
     <h2 class="countdown-title">Countdown to Your Special Day!</h2>
     <div class="countdown-container">
         <div class="countdown-item">
-            <div class="countdown-value" id="countdown-days">00</div>
+            <div class="flip-clock" id="countdown-days">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Days</div>
         </div>
         <div class="countdown-item">
-            <div class="countdown-value" id="countdown-hours">00</div>
+            <div class="flip-clock" id="countdown-hours">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Hours</div>
         </div>
         <div class="countdown-item">
-            <div class="countdown-value" id="countdown-minutes">00</div>
+            <div class="flip-clock" id="countdown-minutes">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Minutes</div>
         </div>
         <div class="countdown-item">
-            <div class="countdown-value" id="countdown-seconds">00</div>
+            <div class="flip-clock" id="countdown-seconds">
+                <div class="flip-clock-inner">
+                    <div class="flip-clock-front">00</div>
+                    <div class="flip-clock-back">00</div>
+                </div>
+            </div>
             <div class="countdown-label">Seconds</div>
         </div>
     </div>
