--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
 <section class="countdown-section">
     <h2 class="countdown-title">Countdown to Your Special Day!</h2>
     <div class="countdown-container">
+        <!-- Days -->
         <div class="countdown-item">
             <div class="flip-clock" id="countdown-days">
                 <div class="flip-clock-inner">
@@ -207,6 +208,8 @@
             </div>
             <div class="countdown-label">Days</div>
         </div>
+        
+        <!-- Hours -->
         <div class="countdown-item">
             <div class="flip-clock" id="countdown-hours">
                 <div class="flip-clock-inner">
@@ -216,6 +219,8 @@
             </div>
             <div class="countdown-label">Hours</div>
         </div>
+
+        <!-- Minutes -->
         <div class="countdown-item">
             <div class="flip-clock" id="countdown-minutes">
                 <div class="flip-clock-inner">
@@ -225,6 +230,8 @@
             </div>
             <div class="countdown-label">Minutes</div>
         </div>
+
+        <!-- Seconds -->
         <div class="countdown-item">
             <div class="flip-clock" id="countdown-seconds">
                 <div class="flip-clock-inner">
