--- a/index.html
+++ b/index.html
@@ -168,14 +168,13 @@
     <div class="tiktok-embed-container">
         <blockquote class="tiktok-embed" 
             cite="https://www.tiktok.com/@busarmydude/video/7462611165613428010" 
-            data-video-id="7462611165613428010" 
-            style="max-width: 605px;min-width: 325px;">
+            data-video-id="7462611165613428010">
             <section>
-                <a target="_blank" title="@busarmydude" href="https://www.tiktok.com/@busarmydude?refer=embed">@busarmydude</a>
-                <a title="meme" target="_blank" href="https://www.tiktok.com/tag/meme?refer=embed">#Meme</a>
-                <a title="memecut" target="_blank" href="https://www.tiktok.com/tag/memecut?refer=embed">#MemeCut</a>
-                <a title="memenatal" target="_blank" href="https://www.tiktok.com/tag/memenatal?refer=embed">#memenatal</a>
-                <a target="_blank" title="♬ original sound - Little_Miss_Relatable 💯👋" href="https://www.tiktok.com/music/original-sound-7385167087310064417?refer=embed">♬ original sound - Little_Miss_Relatable 💯👋</a>
+                <a href="https://www.tiktok.com/@busarmydude?refer=embed" target="_blank" title="@busarmydude">@busarmydude</a>
+                <a href="https://www.tiktok.com/tag/meme?refer=embed" title="meme" target="_blank">#Meme</a>
+                <a href="https://www.tiktok.com/tag/memecut?refer=embed" title="memecut" target="_blank">#MemeCut</a>
+                <a href="https://www.tiktok.com/tag/memenatal?refer=embed" title="memenatal" target="_blank">#memenatal</a>
+                <a href="https://www.tiktok.com/music/original-sound-7385167087310064417?refer=embed" title="♬ original sound - Little_Miss_Relatable 💯👋" target="_blank">♬ original sound - Little_Miss_Relatable 💯👋</a>
             </section>
         </blockquote>
         <script async src="https://www.tiktok.com/embed.js"></script>
