--- a/index.html
+++ b/index.html
@@ -277,11 +277,13 @@
     </div>
 </div>
         
-<!-- Weather Section -->        
-<div id="weather-info">
-        <h2>Weather Information</h2>
+<!-- Weather Section -->
+<div class="weather-container">
+    <h2 id="weather-location">Loading...</h2>
+    <div id="weather-info">
         <p>Loading weather...</p>
     </div>
+</div>
 
 <div class="faq-section">
     <h2>FAQ</h2>
