--- a/index.html
+++ b/index.html
@@ -278,11 +278,9 @@
 </div>
         
 <!-- Weather Section -->
-<div class="weather-container">
-    <h2 id="weather-location">Loading...</h2>
-    <div id="weather-info">
-        <p>Loading weather...</p>
-    </div>
+<div id="weather-info">
+    <h2>Weather Information</h2>
+    <p>Loading weather...</p>
 </div>
 
 <div class="faq-section">
