--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         
 <!-- Countdown Section -->
 <section class="countdown-section">
-    <h2 class="countdown-title">Countdown to Your Special Day!</h2>
+    <h2 class="countdown-title">Countdown till I get my AFO's!</h2>
     <div class="countdown-container">
         <!-- Days -->
         <div class="countdown-item">
