--- a/index.html
+++ b/index.html
@@ -288,10 +288,57 @@
             <span class="faq-arrow">▼</span> How can I contact you?
         </button>
         <div class="faq-answer">
-            <p>You can contact us via the contact form or email busarmydude@gmail.com or contact me on discord at busarmydude</p>
+            <p>You can contact us via the contact form or email busarmydude@gmail.com or contact me on Discord at busarmydude</p>
         </div>
     </div>
-    <!-- Add more FAQ items as needed -->
+    <div class="faq-item">
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> Is my personal data collected when I visit this website?
+        </button>
+        <div class="faq-answer">
+            <p>No, this website does not collect personal data without your consent. Cookies are only used for necessary website functions.</p>
+        </div>
+    </div>
+    <div class="faq-item">
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> What browsers are supported?
+        </button>
+        <div class="faq-answer">
+            <p>This website supports modern browsers like Chrome, Firefox, Safari, Edge, and Opera.</p>
+        </div>
+    </div>
+    <div class="faq-item">
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> What kind of content protection does this site use?
+        </button>
+        <div class="faq-answer">
+            <p>This website has enhanced copy protection, prevents right-clicking, and protects images from being saved.</p>
+        </div>
+    </div>
+    <div class="faq-item">
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> Can I switch to light mode?
+        </button>
+        <div class="faq-answer">
+            <p>No, this website only supports dark mode to ensure a consistent user experience.</p>
+        </div>
+    </div>
+    <div class="faq-item">
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> How often is the content updated?
+        </button>
+        <div class="faq-answer">
+            <p>The content is updated regularly, with version information displayed on the site.</p>
+        </div>
+    </div>
+    <div class="faq-item">
+        <button class="faq-question">
+            <span class="faq-arrow">▼</span> Are there any upcoming features?
+        </button>
+        <div class="faq-answer">
+            <p>Yes, the website is continuously evolving, and new features may be added in future versions. Stay tuned for updates.</p>
+        </div>
+    </div>
 </div>
         
         <!-- Tech Section -->
