--- a/index.html
+++ b/index.html
@@ -178,16 +178,16 @@
 </div>
         
         <!-- Links Section -->
-        <div class="links-section section">
-            <div class="links">
-                <a href="https://riverstechstore24.wordpress.com/" target="_blank">River's Tech Blog</a>
-                <a href="https://rivers-merch-store.printify.me/products" target="_blank">Merch Store (Printify)</a>
-                <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank">Merch Store (Fourthwall)</a>
-                <a href="https://discord.gg/NjMtuZYc52" target="_blank">Join the Bus Army Dude's Community Discord Server!</a>
-                <a href="https://forms.gle/wmugwzd7W3VGghw6A" target="_blank">Bug Report Form!</a>
-                <a href="https://forms.gle/4n2UyC1JSJobPPpy5" target="_blank">Feedback or Suggestions Form!</a>
-            </div>
-        </div>
+<div class="links-section section">
+    <h2 class="section-title">Useful Links</h2>  <!-- Added a title here -->
+    <div class="links">
+        <a href="https://rivers-merch-store.printify.me/products" target="_blank">Merch Store (Printify)</a>
+        <a href="https://riverkritzar-shop.fourthwall.com/" target="_blank">Merch Store (Fourthwall)</a>
+        <a href="https://discord.gg/NjMtuZYc52" target="_blank">Join the Bus Army Dude's Community Discord Server!</a>
+        <a href="https://forms.gle/wmugwzd7W3VGghw6A" target="_blank">Bug Report Form!</a>
+        <a href="https://forms.gle/4n2UyC1JSJobPPpy5" target="_blank">Feedback or Suggestions Form!</a>
+    </div>
+</div>
         
 <!-- Countdown Section -->
 <section class="countdown-section">
