--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <blockquote class="tiktok-embed" 
             cite="https://www.tiktok.com/@busarmydude/video/7463707672450288927" 
             data-video-id="7463707672450288927" 
+            style="max-width: 605px; min-width: 325px;">
             <section>
                 <a href="https://www.tiktok.com/@busarmydude?refer=embed" target="_blank" title="@busarmydude">@busarmydude</a>
                 <p></p>
@@ -174,7 +175,6 @@
         <script async src="https://www.tiktok.com/embed.js"></script>
     </div>
 </div>
-
         
         <!-- Links Section -->
 <div class="links-section section">
