--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                 <img src="check.png" alt="Verified" class="verified">
             </div>
             <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+            <!-- Online Status -->
+            <p id="online-status">Status: Offline</p>
         </div>
     
         <!-- Social Links Section -->
