--- a/index.html
+++ b/index.html
@@ -39,16 +39,19 @@
 
     <div class="container">
         <!-- Profile Section -->
-        <div class="profile-section section">
-            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-            <div class="username-checkmark">
-                <h1>Bus Army Dude</h1>
-                <img src="check.png" alt="Verified" class="verified">
-            </div>
-            <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
-            <!-- Online Status -->
-            <p id="online-status">Status: Offline</p>
-        </div>
+<div class="profile-section section">
+    <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+    <div class="username-checkmark">
+        <h1>Bus Army Dude</h1>
+        <img src="check.png" alt="Verified" class="verified">
+    </div>
+    <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+    
+    <!-- Online/Offline Status -->
+    <div class="online-status" id="online-status">
+        Status: Offline
+    </div>
+</div>
     
         <!-- Social Links Section -->
         <div class="social-links-section">
