--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
         <img src="check.png" alt="Verified" class="verified">
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
-    
-    <!-- Online/Offline Status -->
-    <div class="online-status" id="online-status">
-        Status: Offline
+    <div class="status" id="online-status">
+        <p><span id="status-label">Offline</span></p> <!-- Display Online/Offline status -->
     </div>
 </div>
     
