--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <img src="check.png" alt="Verified" class="verified">
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
-    <div class="status" id="online-status">
-        <p><span id="status-label">Offline</span></p> <!-- Display Online/Offline status -->
+    <!-- Status Section -->
+    <div class="status">
+        <p>Status: <span id="status-label">Offline</span></p> <!-- Default status -->
     </div>
 </div>
     
