--- a/index.html
+++ b/index.html
@@ -117,52 +117,34 @@
 
         
     <!-- TikTok Shoutouts Section -->
-    <div class="shoutouts-section section" id="tiktok-section">
-        <div id="tiktok-shoutouts">
-            <h2>TikTok Creator Shoutouts</h2>
-            <p id="lastUpdated"></p> <!-- Display last updated date and time here -->
-        </div>
-
-        <div class="unavailable-message" id="tiktok-message" style="display: none;">
-            <!-- This message will display if TikTok is unavailable in the user's region -->
-        </div>
-
-        <div class="creator-grid" id="tiktok-creators">
-            <!-- TikTok creator cards will be dynamically generated here -->
-        </div>
+    <div id="tiktok-section" class="section">
+    <div id="tiktok-message" class="message">
+        <h3>This section isn't available in your region.</h3>
+        <p>Unfortunately, TikTok is not available in your region. Stay tuned for updates!</p>
     </div>
+    <div id="tiktok-creators" class="creators-grid"></div>
+    <p id="tiktok-last-updated"></p>
+</div>
 
     <!-- Instagram Shoutouts Section -->
-    <div class="shoutouts-section section" id="instagram-section">
-        <div id="instagram-shoutouts">
-            <h2>Instagram Creator Shoutouts</h2>
-            <p class="last-updated"> <span id="instagram-last-updated-timestamp">N/A</span></p>
-        </div>
-
-        <div class="unavailable-message" id="instagram-message" style="display: none;">
-            <!-- This message will display if Instagram is unavailable in the user's region -->
-        </div>
-
-        <div class="instagram-creator-grid" id="instagram-creators">
-            <!-- Instagram creator cards will be dynamically generated here -->
-        </div>
+    <div id="instagram-section" class="section">
+    <div id="instagram-message" class="message">
+        <h3>This section isn't available in your region.</h3>
+        <p>Unfortunately, Instagram is not available in your region. Stay tuned for updates!</p>
     </div>
+    <div id="instagram-creators" class="creators-grid"></div>
+    <p id="instagram-last-updated"></p>
+</div>
 
     <!-- YouTube Shoutouts Section -->
-    <div class="shoutouts-section section" id="youtube-section">
-        <div id="youtube-shoutouts">
-            <h2>YouTube Creator Shoutouts</h2>
-            <p id="lastUpdatedYouTube"></p> <!-- Display last updated date and time here -->
-        </div>
-
-        <div class="unavailable-message" id="youtube-message" style="display: none;">
-            <!-- This message will display if YouTube is unavailable in the user's region -->
-        </div>
-
-        <div class="youtube-creator-grid" id="youtube-creators">
-            <!-- YouTube creator cards will be dynamically generated here -->
-        </div>
+   <div id="youtube-section" class="section">
+    <div id="youtube-message" class="message">
+        <h3>This section isn't available in your region.</h3>
+        <p>Unfortunately, YouTube is not available in your region. Stay tuned for updates!</p>
     </div>
+    <div id="youtube-creators" class="creators-grid"></div>
+    <p id="youtube-last-updated"></p>
+</div>
         
 <!-- Latest TikTok Video Section -->
 <div class="latest-tiktok-section section">
