--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     </div>
     <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
 </div>
-    
+
+ <!-- Settings Section -->        
+<a href="settings.html">
+  <button class="settings-btn">Settings</button>
+</a>
+        
         <!-- Social Links Section -->
         <div class="social-links-section">
     <h2>Connect with Me</h2>
