--- a/index.html
+++ b/index.html
@@ -37,21 +37,24 @@
     <!-- Microsoft-specific configuration for pinned tiles -->
     <meta name="browserconfig" content="/browserconfig.xml">
 
-    <div class="container">
-        <!-- Profile Section -->
-<div class="profile-section section">
-    <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-    <div class="username-checkmark">
-        <h1>Bus Army Dude</h1>
-        <img src="check.png" alt="Verified" class="verified">
-    </div>
-    <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
-</div>
+<div class="container">
+    <!-- Profile Section -->
+    <div class="profile-section section">
+        <!-- Settings Button (placed inside profile-section) -->
+        <a href="settings.html">
+            <button class="settings-btn">
+                <i class="fa fa-cogs"></i> <!-- Gear Icon -->
+            </button>
+        </a>
 
- <!-- Settings Section -->        
-<a href="settings.html">
-  <button class="settings-btn">Settings</button>
-</a>
+        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+        <div class="username-checkmark">
+            <h1>Bus Army Dude</h1>
+            <img src="check.png" alt="Verified" class="verified">
+        </div>
+        <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
+    </div>
+</div>
         
         <!-- Social Links Section -->
         <div class="social-links-section">
