--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- Settings Button (placed inside profile-section) -->
         <a href="settings.html">
             <button class="settings-btn">
-                <i class="fa fa-cogs"></i> <!-- Gear Icon -->
+                <i class="fa fa-cogs" aria-hidden="true"></i> <!-- Gear Icon -->
             </button>
         </a>
 
