--- a/index.html
+++ b/index.html
@@ -38,24 +38,24 @@
     <!-- Microsoft-specific configuration for pinned tiles -->
     <meta name="browserconfig" content="/browserconfig.xml">
 
-<div class="container">
-    <!-- Profile Section -->
-    <div class="profile-section section">
-        <!-- Settings Button (placed inside profile-section) -->
-        <a href="settings.html">
-            <button class="settings-btn">
-                <i class="fa fa-cogs" aria-hidden="true"></i> <!-- Gear Icon -->
-            </button>
-        </a>
+    <div class="container">
+        <!-- Profile Section -->
+        <div class="profile-section section">
+            <!-- Settings Button (placed inside profile-section) -->
+            <a href="settings.html">
+                <button class="settings-btn">
+                    <i class="fas fa-cogs"></i> <!-- Font Awesome gear icon -->
+                </button>
+            </a>
 
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-        <div class="username-checkmark">
-            <h1>Bus Army Dude</h1>
-            <img src="check.png" alt="Verified" class="verified">
+            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+            <div class="username-checkmark">
+                <h1>Bus Army Dude</h1>
+                <img src="check.png" alt="Verified" class="verified">
+            </div>
+            <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
         </div>
-        <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
     </div>
-</div>
         
         <!-- Social Links Section -->
         <div class="social-links-section">
