--- a/settings.html
+++ b/settings.html
@@ -1,3 +1,4 @@
+<!-- settings.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,24 +7,26 @@
   <title>Settings</title>
   <link rel="stylesheet" href="styles.css">
   <script src="settings.js" defer></script> <!-- Link to a separate JavaScript for settings -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Apple-style font -->
 </head>
 <body>
 
+  <!-- Back Button -->
+  <div class="back-btn-container">
+    <a href="index.html" class="back-btn">
+      <i class="fas fa-arrow-left"></i> Back
+    </a>
+  </div>
+
+  <!-- Settings Container -->
   <div class="settings-container">
     <h1>Settings</h1>
 
-    <!-- Back Button -->
-    <a href="index.html">
-      <button id="back-btn" class="back-btn">Back to Home</button>
-    </a>
-
-    <!-- Dark Mode Toggle -->
     <div class="setting-option">
       <label for="theme-toggle">Enable Dark Mode:</label>
       <input type="checkbox" id="theme-toggle" class="toggle-switch">
     </div>
-    
-    <!-- Language Selector -->
+
     <div class="setting-option">
       <label for="language-select">Choose Language:</label>
       <select id="language-select" class="select-input">
@@ -32,8 +35,7 @@
         <!-- Add more languages as needed -->
       </select>
     </div>
-    
-    <!-- Save Button -->
+
     <button id="save-settings" class="primary-btn">Save Settings</button>
   </div>
 
