--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Bus Army Dude's Profile</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
+    <script src="settings.js" defer></script> <!-- Ensure this JS file is included for dark mode functionality -->
     <meta http-equiv="refresh" content="300">
     
     <!-- Google tag (gtag.js) -->
