--- a/settings.html
+++ b/settings.html
@@ -22,7 +22,7 @@
     
     <div class="setting-option">
       <label for="theme-toggle">Enable Dark Mode:</label>
-      <input type="checkbox" id="theme-toggle" class="toggle-switch" disabled>
+      <input type="checkbox" id="theme-toggle" class="toggle-switch" enabled>
     </div>
     
     <div class="setting-option">
