--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="ai-features.css">
     <script src="settings.js" defer></script> <!-- Ensure this JS file is included for dark mode functionality -->
+    <script src="darkmode.js" defer></script> <!-- Add this script to enable dark mode functionality -->
     <meta http-equiv="refresh" content="300">
     
     <!-- Google tag (gtag.js) -->
