--- a/settings.html
+++ b/settings.html
@@ -7,6 +7,7 @@
   <title>Settings</title>
   <link rel="stylesheet" href="settings.css">
   <script src="settings.js" defer></script>
+  <script src="darkmode.js" defer></script> <!-- Add this script to enable dark mode functionality -->
 </head>
 <body class="settings-page">
 
