--- a/settings.html
+++ b/settings.html
@@ -5,38 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Settings</title>
   <link rel="stylesheet" href="settings.css">
-  <script src="darkmode.js" defer></script> <!-- Dark mode functionality -->
+  <script src="darkmode.js" defer></script> <!-- Link to the dark mode script -->
 </head>
 <body class="settings-page">
 
   <div class="settings-container">
-    <!-- Back Button -->
-    <div class="back-btn-container">
-      <a href="index.html" class="back-btn">
-        <i class="fas fa-arrow-left"></i> Back to Home
-      </a>
-    </div>
-
-    <h1>Settings</h1>
-
-    <!-- Dark Mode Toggle -->
-    <div class="setting-option">
-      <label for="theme-toggle">Enable Dark Mode:</label>
-      <input type="checkbox" id="theme-toggle" class="toggle-switch">
-    </div>
-
-    <!-- Language Selection -->
-    <div class="setting-option">
-      <label for="language-select">Choose Language:</label>
-      <select id="language-select" class="select-input">
-        <option value="en">English</option>
-        <option value="es">Spanish</option>
-        <!-- More languages can be added here -->
-      </select>
-    </div>
-
-    <!-- Save Button (Not functional for now, can be used for saving preferences in the future) -->
-    <button id="save-settings" class="primary-btn">Save Settings</button>
+    <h1>Coming Soon...</h1>
+    <p>We're working on this page! Stay tuned for more updates.</p>
   </div>
 
 </body>
