--- a/settings.html
+++ b/settings.html
@@ -10,6 +10,11 @@
 <body class="settings-page">
 
   <div class="settings-container">
+    <!-- Back Button -->
+    <a href="index.html" class="back-btn">
+      <button class="back-btn-btn">Back to Home</button>
+    </a>
+
     <h1>Coming Soon...</h1>
     <p>We're working on this page! Stay tuned for more updates.</p>
   </div>
