--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
     <!-- Microsoft-specific configuration for pinned tiles -->
     <meta name="browserconfig" content="/browserconfig.xml">
 
-<div class="container">
-    <!-- Profile Section -->
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
-        <div class="username-checkmark">
-            <h1>Bus Army Dude</h1>
-            <img src="check.png" alt="Verified" class="verified">
+    <div class="container">
+        <!-- Profile Section -->
+        <div class="profile-section section">
+            <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+            <div class="username-checkmark">
+                <h1>Bus Army Dude</h1>
+                <img src="check.png" alt="Verified" class="verified">
+            </div>
+            <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
         </div>
-        <p>CURRENT PRESIDENT: Trump (2025-2029), Political party: Republican</p>
-    </div>
-</div>
-        
+    
         <!-- Social Links Section -->
         <div class="social-links-section">
     <h2>Connect with Me</h2>
